# Quadtree

./: CMakeLists.txt
include/: QuadtreeIO.h  quadtree.h
src/: QuadtreeIO.cpp  main.cpp  quadtree.cpp
test/: neighbours.txt  plot_quatree.py  rootNode.txt  script.sh
